[gd_scene load_steps=42 format=3 uid="uid://5oyo75w8bmvq"]

[ext_resource type="Script" path="res://Scripts/PlayerCharacter/player_character_root.gd" id="1_6v30c"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/player_character.gd" id="2_q7ld7"]
[ext_resource type="PackedScene" uid="uid://c2f6gkn1nj3vd" path="res://Art/Player/Character/import/kora_toon_exporting_to_godot.glb" id="3_n4e6q"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/States/StateMachine.gd" id="4_vd4kp"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/States/EnemyWander.gd" id="5_87sd3"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/States/Slash.gd" id="6_afnhe"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/States/Locomote.gd" id="7_x7dml"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/States/LeaningCrate.gd" id="8_myuww"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/States/PushingCrate.gd" id="9_xe6gf"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/States/Crouching.gd" id="10_q077h"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/States/Crawling.gd" id="11_3g0di"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/player_camera_pivot.gd" id="12_qm30x"]
[ext_resource type="PackedScene" uid="uid://bflp5jntvmqk8" path="res://UI/MainMenu/MainMenu.tscn" id="13_tr5ml"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_alo0e"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_duqcs"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4oav6"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_biff6"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_srys3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_duqcs")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_4oav6")
blend_point_1/pos = 0.3
blend_point_2/node = SubResource("AnimationNodeAnimation_biff6")
blend_point_2/pos = 1.0
min_space = 0.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sma0w"]
resource_local_to_scene = true
animation = &"slash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tvpiq"]
animation = &"crawl_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yxknk"]
animation = &"crawl"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ebfcu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tvpiq")
blend_point_0/pos = 0.1
blend_point_1/node = SubResource("AnimationNodeAnimation_yxknk")
blend_point_1/pos = 0.5

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qhlp2"]
animation = &"crouch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4hbm8"]
animation = &"leaning_pushable"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g4gtf"]
animation = &"pushing_pushable"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gy7fs"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wbke6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eh4ht"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2l6ic"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k38qc"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_831vp"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_epm4v"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3diy6"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uup32"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nw37k"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e511p"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sl7d2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nedae"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_61bxm"]
states/Locomote/node = SubResource("AnimationNodeBlendSpace1D_srys3")
states/Locomote/position = Vector2(400, 100)
states/Slash/node = SubResource("AnimationNodeAnimation_sma0w")
states/Slash/position = Vector2(288, -23)
states/crawling/node = SubResource("AnimationNodeBlendSpace1D_ebfcu")
states/crawling/position = Vector2(347, -174)
states/crouch/node = SubResource("AnimationNodeAnimation_qhlp2")
states/crouch/position = Vector2(406, -70)
states/leaning_pushable/node = SubResource("AnimationNodeAnimation_4hbm8")
states/leaning_pushable/position = Vector2(656, -70)
states/pushing_pushable/node = SubResource("AnimationNodeAnimation_g4gtf")
states/pushing_pushable/position = Vector2(672, 39)
transitions = ["Start", "Locomote", SubResource("AnimationNodeStateMachineTransition_gy7fs"), "Locomote", "End", SubResource("AnimationNodeStateMachineTransition_wbke6"), "Slash", "Locomote", SubResource("AnimationNodeStateMachineTransition_eh4ht"), "Locomote", "Slash", SubResource("AnimationNodeStateMachineTransition_2l6ic"), "Locomote", "leaning_pushable", SubResource("AnimationNodeStateMachineTransition_k38qc"), "leaning_pushable", "pushing_pushable", SubResource("AnimationNodeStateMachineTransition_831vp"), "pushing_pushable", "leaning_pushable", SubResource("AnimationNodeStateMachineTransition_epm4v"), "pushing_pushable", "Locomote", SubResource("AnimationNodeStateMachineTransition_3diy6"), "leaning_pushable", "Locomote", SubResource("AnimationNodeStateMachineTransition_uup32"), "Locomote", "crouch", SubResource("AnimationNodeStateMachineTransition_nw37k"), "crouch", "Locomote", SubResource("AnimationNodeStateMachineTransition_e511p"), "crouch", "crawling", SubResource("AnimationNodeStateMachineTransition_sl7d2"), "crawling", "crouch", SubResource("AnimationNodeStateMachineTransition_nedae")]
graph_offset = Vector2(-10, -211)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_d3hs1"]
nodes/AnimSpeed/node = SubResource("AnimationNodeTimeScale_alo0e")
nodes/AnimSpeed/position = Vector2(60, 100)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_61bxm")
nodes/StateMachine/position = Vector2(-120, 100)
nodes/output/position = Vector2(220, 100)
node_connections = [&"output", 0, &"AnimSpeed", &"AnimSpeed", 0, &"StateMachine"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_htfwu"]
radius = 0.15
height = 0.8

[node name="Node3D" type="Node3D"]
script = ExtResource("1_6v30c")

[node name="PlayerCharacter" type="RigidBody3D" parent="."]
script = ExtResource("2_q7ld7")

[node name="SkinnedMesh" parent="PlayerCharacter" instance=ExtResource("3_n4e6q")]
transform = Transform3D(-1, 0, -6.28631e-06, 0, 1, 0, 6.28631e-06, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="PlayerCharacter/SkinnedMesh/rig" index="0"]
bones/1/position = Vector3(-8.09215e-05, -0.00166247, -0.00802491)
bones/1/rotation = Quaternion(0.0211645, -0.000710467, 1.504e-05, 0.999776)
bones/3/rotation = Quaternion(0.700905, 8.43486e-08, 8.70634e-08, 0.713255)
bones/4/rotation = Quaternion(-0.702987, 0.0343202, -0.011854, 0.710275)
bones/5/rotation = Quaternion(0.665899, 9.14319e-08, 7.93813e-08, 0.746042)
bones/8/rotation = Quaternion(-0.474235, -0.533289, -0.449223, 0.537497)
bones/10/rotation = Quaternion(0.51719, -0.645965, 0.216209, -0.518168)
bones/10/scale = Vector3(1.00544, 0.989215, 1.00544)
bones/11/rotation = Quaternion(7.34661e-08, 0.0326564, -1.92014e-08, 0.999467)
bones/12/rotation = Quaternion(0.486672, 0.0324929, -0.0181372, 0.872792)
bones/12/scale = Vector3(1.00248, 0.983451, 1.01442)
bones/13/rotation = Quaternion(8.3526e-08, 0.00878573, -3.33747e-08, 0.999961)
bones/14/rotation = Quaternion(-0.117256, 0.00872693, -0.0350007, 0.992447)
bones/14/scale = Vector3(0.992263, 1.01446, 0.993497)
bones/15/rotation = Quaternion(-0.544978, 0.514954, 0.590335, 0.298874)
bones/16/rotation = Quaternion(0.54963, 0.628097, -0.22098, -0.504548)
bones/16/scale = Vector3(1.00552, 0.989053, 1.00552)
bones/17/rotation = Quaternion(-3.63841e-08, -0.0360538, -7.55853e-08, 0.99935)
bones/18/rotation = Quaternion(0.48084, -0.0368522, 0.0202466, 0.8758)
bones/18/scale = Vector3(1.00252, 0.9834, 1.01443)
bones/19/rotation = Quaternion(-1.17791e-07, -0.0215682, 7.34586e-08, 0.999767)
bones/20/rotation = Quaternion(-0.0591162, -0.020712, 0.109821, 0.991976)
bones/20/scale = Vector3(0.993174, 1.0147, 0.992354)
bones/26/rotation = Quaternion(1.50194e-08, 0.0233324, -0.000988298, 0.999727)
bones/27/rotation = Quaternion(0.714026, 8.60783e-08, 9.05334e-08, 0.700119)
bones/28/rotation = Quaternion(-0.713831, 0.0156297, -0.017352, 0.699928)
bones/29/rotation = Quaternion(0.781919, 7.98056e-08, 9.59998e-08, 0.62338)
bones/34/rotation = Quaternion(0.96542, 0.0853661, -0.0996563, 0.225267)
bones/34/scale = Vector3(1.00445, 0.991156, 1.00445)
bones/35/rotation = Quaternion(6.60653e-09, 0.00359217, 4.34119e-10, 0.999994)
bones/36/rotation = Quaternion(0.396659, 0.00411264, -0.00177521, 0.917955)
bones/36/scale = Vector3(1.00623, 0.980839, 1.01331)
bones/37/rotation = Quaternion(-1.02325e-08, 0.00720411, 1.16661e-07, 0.999974)
bones/38/rotation = Quaternion(0.802876, -0.00706062, -0.0450346, -0.594401)
bones/38/scale = Vector3(0.989473, 0.992116, 1.01884)
bones/39/rotation = Quaternion(-0.00282727, 0.954981, -0.296652, -0.000915457)
bones/42/rotation = Quaternion(0.983354, 0.037827, 0.0871373, 0.15489)
bones/42/scale = Vector3(1.00175, 0.996508, 1.00175)
bones/43/rotation = Quaternion(1.00403e-08, 0.00255199, -8.20795e-09, 0.999997)
bones/44/rotation = Quaternion(0.211434, 0.00280902, -0.00060549, 0.977388)
bones/44/scale = Vector3(1.0022, 0.994798, 1.00303)
bones/45/rotation = Quaternion(-2.59696e-08, -0.0322936, 8.84552e-08, 0.999478)
bones/46/rotation = Quaternion(0.722097, 0.0322826, 0.0211102, -0.690716)
bones/46/scale = Vector3(0.996264, 0.996289, 1.00749)
bones/49/position = Vector3(-0.00888539, 0.0504595, 0.234165)
bones/49/rotation = Quaternion(0.794095, 0.0279138, -0.0365748, 0.60605)
bones/50/rotation = Quaternion(-0.102265, 0.00238507, 0.023186, 0.994484)
bones/51/rotation = Quaternion(-0.0185201, 0.00217053, 0.0233635, 0.999553)
bones/52/rotation = Quaternion(-0.0479487, 1.2049e-07, -5.84987e-09, 0.99885)
bones/53/rotation = Quaternion(0.432839, -0.00409875, 0.0360778, 0.90074)
bones/55/rotation = Quaternion(-0.334486, -0.00535242, 0.0329367, 0.94181)
bones/56/rotation = Quaternion(-0.633082, 7.58155e-09, -8.0421e-05, 0.774085)
bones/57/rotation = Quaternion(-0.290626, 7.67614e-10, -0.00181266, 0.956835)

[node name="AnimationTree" type="AnimationTree" parent="PlayerCharacter/SkinnedMesh"]
tree_root = SubResource("AnimationNodeBlendTree_d3hs1")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/AnimSpeed/scale = 1.0
parameters/StateMachine/Locomote/blend_position = -0.0275049
parameters/StateMachine/crawling/blend_position = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCharacter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.42, 0)
shape = SubResource("CapsuleShape3D_htfwu")

[node name="StateMachine" type="Node" parent="PlayerCharacter" node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_vd4kp")
initial_state = NodePath("Locomote")

[node name="EnemyWander" type="Node" parent="PlayerCharacter/StateMachine" node_paths=PackedStringArray("animTree")]
script = ExtResource("5_87sd3")
animTree = NodePath("../../SkinnedMesh/AnimationTree")

[node name="Slash" type="Node" parent="PlayerCharacter/StateMachine" node_paths=PackedStringArray("animTree")]
script = ExtResource("6_afnhe")
animTree = NodePath("../../SkinnedMesh/AnimationTree")

[node name="Locomote" type="Node" parent="PlayerCharacter/StateMachine" node_paths=PackedStringArray("animTree")]
script = ExtResource("7_x7dml")
animTree = NodePath("../../SkinnedMesh/AnimationTree")

[node name="LeaningCrate" type="Node" parent="PlayerCharacter/StateMachine" node_paths=PackedStringArray("animTree")]
script = ExtResource("8_myuww")
animTree = NodePath("../../SkinnedMesh/AnimationTree")

[node name="PushingCrate" type="Node" parent="PlayerCharacter/StateMachine" node_paths=PackedStringArray("animTree")]
script = ExtResource("9_xe6gf")
animTree = NodePath("../../SkinnedMesh/AnimationTree")

[node name="Crouching" type="Node" parent="PlayerCharacter/StateMachine" node_paths=PackedStringArray("animTree")]
script = ExtResource("10_q077h")
animTree = NodePath("../../SkinnedMesh/AnimationTree")

[node name="Crawling" type="Node" parent="PlayerCharacter/StateMachine" node_paths=PackedStringArray("animTree")]
script = ExtResource("11_3g0di")
animTree = NodePath("../../SkinnedMesh/AnimationTree")

[node name="PlayerCameraPivot" type="Node3D" parent="."]
script = ExtResource("12_qm30x")

[node name="Camera3D" type="Camera3D" parent="PlayerCameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.658125, 0.752909, 0, -0.752909, 0.658125, -4.76837e-07, 5.11775, 3.42914)

[node name="Control" parent="PlayerCameraPivot/Camera3D" instance=ExtResource("13_tr5ml")]
visible = false

[node name="GroundCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0634478, 0.00461194)
target_position = Vector3(0, -0.15, 0)

[editable path="PlayerCharacter/SkinnedMesh"]
